--- a/index.html
+++ b/index.html
@@ -78,8 +78,65 @@
         </div>
         <div class="box-2">
             <img src="images/run.jpg" alt="">
-
         </div>
     </section>
+
+        <div class="calculator">
+            <h1>BMI Calculator</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+        </div>
+        <section class="chart">
+            <div class="box-3">
+                <h1>BMI calculator chart</h1>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>
+                                <h3>BMI</h3>
+                            </th>
+                            <th>
+                                <h3>Weight status</h3>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Blew 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5-24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                            <td>25.0-and above</td>
+                            <td>obese</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="box-4">
+                <h1>Calculate Your BMI</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts</p>
+            </div>
+            <div class="box-5">
+                <div>
+               <input class="height" type="text" placeholder="Height/cm">
+               <input class="weight" ="text" placeholder="Weight/kg">
+               </div>
+
+               <input class="age" type="text" placeholder="Age">
+               <select  class="gender"="" id="">
+                <option value="">Sex</option>
+                <option value="">Mail</option>
+                <option value="">Femail</option>
+               </select>
+               <div>
+               <select class="activity" name="" id="">
+                <option value="">Select an activity factor</option>
+               </select>
+               </div>
+            </div>
+        </section>
 </body>
 </html>
