--- a/index.html
+++ b/index.html
@@ -121,22 +121,27 @@
             </div>
             <div class="box-5">
                 <div>
-               <input class="height" type="text" placeholder="Height/cm">
-               <input class="weight" ="text" placeholder="Weight/kg">
+                   <input class="height" type="text" placeholder="Height/cm">
+                   <input class="weight" ="text" placeholder="Weight/kg">
                </div>
 
                <input class="age" type="text" placeholder="Age">
                <select  class="gender"="" id="">
-                <option value="">Sex</option>
-                <option value="">Mail</option>
-                <option value="">Femail</option>
+                   <option value="">Sex</option>
+                   <option value="">Mail</option>
+                   <option value="">Femail</option>
                </select>
                <div>
-               <select class="activity" name="" id="">
-                <option value="">Select an activity factor</option>
+                   <select class="activity" name="" id="">
+                   <option value="">Select an activity factor</option>
                </select>
                </div>
             </div>
         </section>
+        <div class="team">
+            <h1>Meet Your Team</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+        
 </body>
 </html>
