--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+    <section class="container">
     <nav class="header">
         <h1 class="fitness"> <span> <i>Fitness</i></span></h1>
         <ul class="nav-menu">
@@ -80,6 +81,7 @@
             <img src="images/run.jpg" alt="">
         </div>
     </section>
+    </section>
 
         <div class="calculator">
             <h1>BMI Calculator</h1>
@@ -115,6 +117,7 @@
                     </tbody>
                 </table>
             </div>
+
             <div class="box-4">
                 <h1>Calculate Your BMI</h1>
                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts</p>
@@ -138,10 +141,89 @@
                </div>
             </div>
         </section>
+        <section class="container">
         <div class="team">
-            <h1>Meet Your Team</h1>
+            <h1>Meet Our Team</h1>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
         </div>
-        
+        <div class="trining-center">
+            <div class="relative">
+                <img class="tr"src="images/trainer1.png" alt="">
+            <div class="name">
+                <h3>Joren bell</h3>
+                <p>Triner</p>
+            </div>
+        </div>
+        <div class="relative">
+            <img class="tr" src="images/trainer2.png" alt="">
+            <div class="name">
+                <h3>Cameron Williamson</h3>
+                <p>Trainer</p>
+            </div>
+        </div>
+        <div class="relative">
+            <img class="tr" src="images/trainer3.png" alt="">
+            <div class="name">
+                <h3>Darrell Steward</h3>
+                <p>Triner</p>
+            </div>
+        </div>
+        <div class="relative">
+            <img class="tr" src="images/trainer4.png" alt="">
+            <div class="name">
+                <h3>Dianne Russell</h3>
+                <p>Triner</p>
+            </div>
+        </div>
+        <div class="relative">
+            <img class="tr" src="images/trainer5.png" alt="">
+            <div class="name">
+                <h3>Cody Fisher</h3>
+                <p>Triner</p>
+            </div>
+        </div>
+        <div class="relative">
+            <img class="tr" src="images/trainer6.png" alt="">
+            <div class="name">
+                <h3>Theresa Webb</h3>
+                <p>triner</p>
+            </div>
+        </div>
+        </div>
+        </section>
+        <section class="full-body">
+                <div class="last">
+                    <h2> <i class="text">Fitness</i></h2>
+                    <p>We believe fitness should be accessible to everyone, everywhere, <br>regardless of income or access to a gym. <br>With hundreds of professional workouts</p>
+                </div>
+        <div class="br">
+            <div>
+                <ul>
+                    <li>
+                        <h1>Get started</h1>
+                    </li>
+                    <li>service</li>
+                    <li>contact</li>
+                    <li>program</li>
+                    <li>about us</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <h1>Get started</h1>
+                    </li>
+                    <li>fitness</li>
+                    <li>platform</li>
+                    <li>libary</li>
+                    <li>app design</li>
+                </ul>
+            </div>
+        </div>
+        <div class="cr">
+            <hr style="width:90%;margin-bottom: 20px;"
+            <p>All right reserved @fitness 2024</p>
+        </div>
+        </section>
 </body>
 </html>
