--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                             <td>25.0-and above</td>
                             <td>obese</td>
                         </tr>
+                        <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -121,24 +125,23 @@
             <div class="box-4">
                 <h1>Calculate Your BMI</h1>
                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts</p>
-            </div>
+            
             <div class="box-5">
-                <div>
-                   <input class="height" type="text" placeholder="Height/cm">
-                   <input class="weight" ="text" placeholder="Weight/kg">
-               </div>
-
-               <input class="age" type="text" placeholder="Age">
-               <select  class="gender"="" id="">
+                <div class="box-6">
+                   <input class="box-6-input" type="text" placeholder="Height/cm">
+                   <input class="box-6-input" ="text" placeholder="Weight/kg">
+                   <input class="box-6-input" type="text" placeholder="Age">
+               <select  class="gender">
                    <option value="">Sex</option>
                    <option value="">Mail</option>
                    <option value="">Femail</option>
                </select>
-               <div>
-                   <select class="activity" name="" id="">
+                   <select class="activity">
                    <option value="">Select an activity factor</option>
                </select>
                </div>
+               <button class="text-primary">Calculator</button>
+            </div>
             </div>
         </section>
         <section class="container">
