--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <section class="banner">
         <div class="helthay">
-            <h1>Get Body in <br> <span class="font">shape</span>  and stay <br>healthy</h1>
+            <h1>Get Body in <br> <span class="font">shape</span> & stay <br>healthy</h1>
             <p> A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
             <button class="text-primary">Join Club Now!</button>
             <button class="text-button">Downlooad App</button>
@@ -126,20 +126,20 @@
                 <h1>Calculate Your BMI</h1>
                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts</p>
             
-            <div class="box-5">
+            <div class="bmi-form">
                 <div class="box-6">
                    <input class="box-6-input" type="text" placeholder="Height/cm">
-                   <input class="box-6-input" ="text" placeholder="Weight/kg">
+                   <input class="box-6-input" type="text" placeholder="Weight/kg">
                    <input class="box-6-input" type="text" placeholder="Age">
                <select  class="gender">
                    <option value="">Sex</option>
                    <option value="">Mail</option>
                    <option value="">Femail</option>
-               </select>
-                   <select class="activity">
-                   <option value="">Select an activity factor</option>
-               </select>
-               </div>
+            </select>
+
+                <select class="activity">
+                <option value="">Select an activity factor</option>
+            </select>
                <button class="text-primary">Calculator</button>
             </div>
             </div>
